Implement script functionality for CPP-IO-grader